fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -311,3 +311,7 @@ div[class*='line'] span:active {
   -webkit-filter: drop-shadow(0px 2px 15px #71D4FE);
     filter: drop-shadow(0px 2px 15px #71D4FE);
 }
+
+.word {
+  white-space: pre;
+}
